--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hola coursera</h1>
+    <h2>Don't be afraid to be &lt;then a 100% succes &amp; &gt;more</h2>
+    <h3>Simbolo &copy; Copyright</h3>
 </body>
 </html>
